--- a/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse.csproj
+++ b/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse.csproj
@@ -8,14 +8,14 @@
     <RootNamespace>Frends.FixedWidthFlatFile.Parse</RootNamespace>
 
     <Version>1.0.0</Version>
-    <Authors>Frends</Authors>
+    <Authors>Jefim Borissov</Authors>
     <Copyright>Frends</Copyright>
     <Company>Frends</Company>
     <Product>Frends</Product>
     <PackageTags>Frends</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Description>Task for transforming XML using XSLT.</Description>
+    <Description>Task for parsing fixed flat files.</Description>
     <PackageProjectUrl>https://frends.com/</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.FixedWidthFlatFile/tree/main/Frends.FixedWidthFlatFile.Parse</RepositoryUrl>
   </PropertyGroup>
