--- a/Frends.FixedWidthFlatFile.ConvertToJSON/Frends.FixedWidthFlatFile.ConvertToJSON/Frends.FixedWidthFlatFile.ConvertToJSON.csproj
+++ b/Frends.FixedWidthFlatFile.ConvertToJSON/Frends.FixedWidthFlatFile.ConvertToJSON/Frends.FixedWidthFlatFile.ConvertToJSON.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>net6.0</TargetFrameworks>
-    <authors>HiQ Finland</authors>
-    <copyright>HiQ Finland</copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/FrendsPlatform/Frends.FixedWidthFlatFile</PackageProjectUrl>
-    <IncludeSource>true</IncludeSource>
-    <PackageTags>Frends</PackageTags>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>1.0.5</Version>
+	<TargetFramework>net6.0</TargetFramework>
+	<Version>1.0.0</Version>
+    <authors>Frends</authors>
+    <copyright>Frends</copyright>
+	<Company>Frends</Company>
+	<Product>Frends</Product>
+	<PackageTags>Frends</PackageTags>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Description>Task for converting string to json format.</Description>
+	<PackageProjectUrl>https://frends.com/</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.FixedWidthFlatFile/</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
