--- a/Frends.FixedWidthFlatFile.ConvertToXML/Frends.FixedWidthFlatFile.ConvertToXML/Frends.FixedWidthFlatFile.ConvertToXML.csproj
+++ b/Frends.FixedWidthFlatFile.ConvertToXML/Frends.FixedWidthFlatFile.ConvertToXML/Frends.FixedWidthFlatFile.ConvertToXML.csproj
@@ -10,7 +10,7 @@
 	<PackageTags>Frends</PackageTags>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Description>Task for converting string to json format.</Description>
+    <Description>Task for converting string to xml format.</Description>
 	<PackageProjectUrl>https://frends.com/</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.FixedWidthFlatFile/</RepositoryUrl>
   </PropertyGroup>
