Added metadata json file to the csproj file

--- a/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse.csproj
+++ b/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse.csproj
@@ -20,4 +20,10 @@
 	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.FixedWidthFlatFile/tree/main/Frends.FixedWidthFlatFile.Parse</RepositoryUrl>
   </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="FrendsTaskMetadata.json" Pack="true" PackagePath="/">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
