--- a/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse.csproj
+++ b/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse/Frends.FixedWidthFlatFile.Parse.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>Frends.FixedWidthFlatFile.Parse</AssemblyName>
     <RootNamespace>Frends.FixedWidthFlatFile.Parse</RootNamespace>
 
-    <Version>1.0.0</Version>
+    <Version>1.0.2</Version>
     <Authors>Jefim Borissov</Authors>
     <Copyright>Frends</Copyright>
     <Company>Frends</Company>
@@ -15,7 +15,7 @@
     <PackageTags>Frends</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Description>Frends Task for parsing fixed flat files.</Description>
+    <Description>Frends Task for parsing fixed width flat files.</Description>
     <PackageProjectUrl>https://frends.com/</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.FixedWidthFlatFile/tree/main/Frends.FixedWidthFlatFile.Parse</RepositoryUrl>
   </PropertyGroup>
